# scheduler

./: me.ramkumar.scheduler.json  me.ramkumar.scheduler.json~  meson.build
data/: me.ramkumar.scheduler.appdata.xml.in  me.ramkumar.scheduler.desktop.in  me.ramkumar.scheduler.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: application.js  main.js  me.ramkumar.scheduler.data.gresource.xml  me.ramkumar.scheduler.src.gresource.xml  meson.build  window.js  window.ui
